--- a/custom_addons/oao_dental_clinic_management/views/menu_views.xml
+++ b/custom_addons/oao_dental_clinic_management/views/menu_views.xml
@@ -4,19 +4,19 @@
           sequence="10"
           web_icon="oao_dental_clinic_management/static/description/icon.png"/>
 
-        <menuitem id="menu_appointments_sub_menu"
+        <menuitem id="menu_appointments_submenu"
                   name="Appointments Table"
                   parent="menu_custom_data_root"
                   action="action_patient_appointment_calendar"
                   sequence="10"/>
 
-        <menuitem id="menu_patient_sub_menu"
+        <menuitem id="menu_patient_submenu"
                   name="Patients"
                   parent="menu_custom_data_root"
                   action="action_patient"
                   sequence="20"/>
 
-        <menuitem id="menu_configuration_sub_menu"
+        <menuitem id="menu_configuration_submenu"
                   name="Configuration"
                   sequence="30"
                   parent="menu_custom_data_root"/>
