added model, views, security for employee table

--- a/custom_addons/oao_dental_clinic_management/views/menu_views.xml
+++ b/custom_addons/oao_dental_clinic_management/views/menu_views.xml
@@ -26,4 +26,10 @@
                       action="action_employee_type"
                       sequence="10"
                       parent="menu_configuration_submenu"/>
+
+            <menuitem id="menu_employee"
+                      name="Employees"
+                      action="action_employee"
+                      sequence="20"
+                      parent="menu_configuration_submenu"/>
 </odoo>
