--- a/custom_addons/oao_dental_clinic_management/views/patient_appointment_views.xml
+++ b/custom_addons/oao_dental_clinic_management/views/patient_appointment_views.xml
@@ -25,7 +25,7 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <field name="appointment_status" widget="statusbar" statusbar_visible="draft,confirm,in_exam,completed_exam,completed_appointment,cancelled" clickable="True"/>
+                    <field name="appointment_status" widget="statusbar" statusbar_visible="draft,confirm,in_exam,completed_exam,completed_appointment,cancelled" options="{'clickable': '1'}"/>
                 </header>
                 <sheet>
                     <div class="oe_title">
@@ -35,10 +35,24 @@
                     </div>
                     <group>
                         <group>
+                            <field name="appointment_serial" readonly="1"/>
                             <field name="patient_id"/>
+                            <field name="start"/>
+                            <field name="dentist_id"/>
+                            <field name="pricelist_id"/>
+                        </group>
+                        <group>
+                            <field name="urgency_level"/>
+                            <field name="stop"/>
+                            <field name="product_id"/>
                         </group>
                     </group>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids"/>
+                    <field name="activity_ids"/>
+                    <field name="message_ids"/>
+                </div>
             </form>
         </field>
     </record>
